test-cases/negative/test_072_else_without_if.lay
# negative test: else statement without preceding if
# expected: parser should reject this

else
  print 'hello'
end if


